Fix BWC-1233 Recovery fields misaligned: they are left-justified

--- a/css/signup.css
+++ b/css/signup.css
@@ -111,6 +111,10 @@
     box-shadow: inset 5px 5px 5px rgba(0,0,0,.3);
 }
 
+.recover-password {
+    text-align:center;
+}
+
 .checkbox-group {
 
 }
